@@ -632,6 +632,24 @@ Dquery-只读SQL接口
 #footer24_text
 d-preview - 预览您的数据
 
+#footer25_text
+有用的链接
+
+#footer26_text
+附加信息
+
+#footer27_text
+隐私
+
+#footer28_text
+© 版权所有 IATI 2024。保留所有权利
+
+#footer29_text
+文档和常见问题解答
+
+#footer30_text
+如果您对 d-portal 中数据的显示方式或数据的最新性有任何疑问，请参阅<b><a href="https://docs.d-portal.org/en/latest/">常见问题解答</a></b>或联系 IATI 支持服务台
+
 #read_more_text
 阅读全文
 
