@@ -635,6 +635,24 @@ Dquery - A read-only SQL interface
 #footer24_text
 d-preview - Preview your data
 
+#footer25_text
+Useful links
+
+#footer26_text
+Additional information
+
+#footer27_text
+Privacy
+
+#footer28_text
+© Copyright IATI 2024. All rights reserved
+
+#footer29_text
+Documentation and FAQ
+
+#footer30_text
+If you have any queries about how the data is shown in d-portal, or how up to date the data is, please see the <b><a href="https://docs.d-portal.org/en/latest/">FAQ</a></b> or contact the IATI support helpdesk
+
 #read_more_text
 About data quality and why it matters
 
