@@ -632,6 +632,24 @@ Dquery - Une interface SQL en lecture seule
 #footer24_text
 d-preview - Prévisualisez vos données
 
+#footer25_text
+Liens utiles
+
+#footer26_text
+Informations complémentaires
+
+#footer27_text
+Confidentialité
+
+#footer28_text
+© Copyright IATI 2024. Tous droits réservés
+
+#footer29_text
+Documentation et FAQ
+
+#footer30_text
+Si vous avez des questions sur la façon dont les données sont affichées dans d-portal ou sur leur actualité, veuillez consulter la <b><a href="https://docs.d-portal.org/en/latest/">FAQ</a></b> ou contacter le service d'assistance IATI
+
 #read_more_text
 Lire la suite
 
