@@ -629,6 +629,24 @@ Dquery - केवल SQL इंटरफ़ेस पढ़ा जाता ह
 #footer24_text
 d-preview - अपने डेटा का पूर्वावलोकन करें
 
+#footer25_text
+उपयोगी लिंक
+
+#footer26_text
+अतिरिक्त जानकारी
+
+#footer27_text
+गोपनीयता
+
+#footer28_text
+© कॉपीराइट IATI 2024. सभी अधिकार सुरक्षित
+
+#footer29_text
+दस्तावेज़ीकरण और अक्सर पूछे जाने वाले प्रश्न
+
+#footer30_text
+यदि आपके पास d-portal में डेटा कैसे दिखाया जाता है, या डेटा कितना अद्यतित है, इस बारे में कोई प्रश्न हैं, तो कृपया <b><a href="https://docs.d-portal.org/en/latest/">अक्सर पूछे जाने वाले प्रश्न</a></b> देखें या IATI सहायता हेल्पडेस्क से संपर्क करें
+
 #read_more_text
 और अधिक पढ़ें
 
