@@ -632,6 +632,24 @@ Dquery-読み取り専用SQLインターフェース
 #footer24_text
 d-preview - データをプレビューする
 
+#footer25_text
+便利なリンク
+
+#footer26_text
+追加情報
+
+#footer27_text
+プライバシー
+
+#footer28_text
+© Copyright IATI 2024. 無断転載禁止
+
+#footer29_text
+ドキュメントと FAQ
+
+#footer30_text
+d-portal でのデータの表示方法やデータの最新性についてご質問がある場合は、<b><a href="https://docs.d-portal.org/en/latest/">FAQ</a></b> をご覧いただくか、IATI サポート ヘルプデスクにお問い合わせください。
+
 #read_more_text
 続きを読む
 
