@@ -629,6 +629,24 @@ Dquery - Una interfaz SQL de solo lectura
 #footer24_text
 d-preview - Vista previa de sus datos
 
+#footer25_text
+Enlaces útiles
+
+#footer26_text
+Información adicional
+
+#footer27_text
+Privacidad
+
+#footer28_text
+© Copyright IATI 2024. Todos los derechos reservados
+
+#footer29_text
+Documentación y preguntas frecuentes
+
+#footer30_text
+Si tiene alguna pregunta sobre cómo se muestran los datos en d-portal o sobre su actualización, consulte las <b><a href="https://docs.d-portal.org/es/latest/">Preguntas frecuentes</a></b> o comuníquese con el servicio de asistencia técnica de IATI
+
 #read_more_text
 Leer más
 
