@@ -1,3 +1,8 @@
+Development Portal (2025-01-09 shi)
+==============================
+Add social icons to footer
+
+
 Development Portal (2025-01-08 shi)
 ==============================
 Update money table css
